[package]
name = "surveymaker"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
mongodb = "2.5.0"
tokio = { version = "1", features = ["full"]}

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "main", features = ["mongodb"] }

dotenv = "0.15"