[package]
name = "surveymaker"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.5.0"  # MongoDB driver for Rust
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
